--- a/bookstore_project/store/templates/store/index.html
+++ b/bookstore_project/store/templates/store/index.html
@@ -1,1 +1,20 @@
-{{text}}
+{% extends 'store/base.html' %}
+
+
+{% block content %}
+
+{% for book in books %}
+    <div class="col-sm-4 text-center">
+        <a href="{% url 'store:detail' book_id=book.id %}">
+          <img class="img-responsive" src="{{ book.picture }}" alt="{{ book.title }}">
+        </a>
+        <h3><a href="{% url 'store:detail' book_id=book.id %}">{{ book.title }}</a></h3>
+        {% for author in book.authors.all %}
+            <p>{{ author.name }}</p>
+        {% endfor %}
+    </div>
+    {% if forloop.counter|divisibleby:3 %}<div class="clearfix"></div>{% endif %}
+{% endfor %}
+
+{% endblock %}
+
