--- a/bookstore_project/store/templates/store/base.html
+++ b/bookstore_project/store/templates/store/base.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a>Tous nos livres</a> 
+                        <h3><a href="{% url 'store:listing' %}">Tous nos livres</a></h3> 
                     </li>
                 </ul>
             </div>
