--- a/bookstore_project/store/templates/store/detail.html
+++ b/bookstore_project/store/templates/store/detail.html
@@ -19,12 +19,12 @@
 	<div class="form-group {% if form.name.errors %}has-warning has-feedback{% endif %}">
 		<label for="{{ form.name.id_for_label }}" class="control-label">Nom</label>
       	<!-- <input type="text" name="name" value="" id="name"> -->
-     	 {{ form.name }}
+     	 {{ form.user_name }}
 	</div>
 	<div class="form-group {% if form.email.errors %}has-warning has-feedback{% endif %}">
 		<label for="{{ form.email.id_for_label }}" class="control-label">E-mail</label>
 		<!--<input type="text" name="email" value="" id="email">-->
-		{{ form.email }}
+		{{ form.user_email }}
 	</div>
 
 	<button type="submit" class="btn btn-success">Réserver</button>
