update views and add pagination

--- a/bookstore_project/store/templates/store/list.html
+++ b/bookstore_project/store/templates/store/list.html
@@ -28,3 +28,16 @@
 
 {% endif %}
 
+{% if paginate %}
+  <div class="clearfix"></div>
+  <nav aria-label="">
+    <ul class="pager">
+      {% if books.has_previous %}
+          <li><a href="?page={{ books.previous_page_number }}">Précédent</a></li>
+      {% endif %}
+      {% if books.has_next %}
+          <li><a href="?page={{ books.next_page_number }}">Suivant</a></li>
+      {% endif %}
+    </ul>
+  </nav>
+{% endif %}
