--- a/bookstore_project/store/templates/store/register.html
+++ b/bookstore_project/store/templates/store/register.html
@@ -7,14 +7,14 @@
             {% csrf_token %}
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel panel-default">
-                    <div class="panel-heading">Register</div>
+                    <div class="panel-heading">Inscription</div>
                     <div class="panel-body">
                         {% if error_message %}
                             <p class="bg-danger p-d ml-b">{{ error_message }}</p>
                         {% endif %}
                        
                         <div class="form-group clearfix">
-                            <label for="{{ form.username.id_for_label }}" class="col-md-4 control-label text-right">Username<span class="text-red">*</span>:</label>
+                            <label for="{{ form.username.id_for_label }}" class="col-md-4 control-label text-right">Nom d'utilisateur<span class="text-red">*</span>:</label>
                             <div class="col-md-6">
                                 {{ form.username }}
                             </div>
@@ -26,19 +26,19 @@
                             </div>
                         </div>
                         <div class="form-group clearfix">
-                            <label for="{{ form.password.id_for_label }}" class="col-md-4 control-label text-right">Password<span class="text-red">*</span>:</label>
+                            <label for="{{ form.password.id_for_label }}" class="col-md-4 control-label text-right">Mot de passe<span class="text-red">*</span>:</label>
                             <div class="col-md-6">
                                 {{ form.password }}
                             </div>
                         </div>
                         <div class="form-group clearfix">
-                            <label for="{{ form.password_repeat.id_for_label }}" class="col-md-4 control-label text-right">Confirm password:</label>
+                            <label for="{{ form.password_repeat.id_for_label }}" class="col-md-4 control-label text-right">Confirmer mot de passe:</label>
                             <div class="col-md-6">
                                 {{ form.password_repeat }}
                             </div>
                         </div>
                         <div class="col-md-6 col-md-offset-4">
-                            <input type="submit" value="Register" class="btn btn-success">
+                            <input type="submit" value="S'inscrire" class="btn btn-success">
                         </div>
                     </div>
                 </div>
