--- a/bookstore_project/store/templates/store/connexion.html
+++ b/bookstore_project/store/templates/store/connexion.html
@@ -2,35 +2,42 @@
 
 
 {% block content %}
-    <div class="container">
-        <form action="{% url 'store:connexion' %}" method="post">
-            {% csrf_token %}
-            <div class="col-md-8 col-md-offset-2">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Connexion</div>
-                    <div class="panel-body">
-                        {% if True == error_message %}
-                            <p class="bg-danger p-d ml-b">connexion échouée, essayer une autre fois !</p>
-                        {% endif %}
-                       
-                        <div class="form-group clearfix">
-                            <label for="{{ form.username.id_for_label }}" class="col-md-4 control-label text-right">Nom d'utilisateur<span class="text-red">*</span>:</label>
-                            <div class="col-md-6">
-                                {{ form.username }}
+
+    {% if user.is_authenticated %}
+        <p class="text-success">Vous êtes connecté !</p>
+        <p>Pour vous rendre sur votre espace <a href="{% url 'store:user_account' %}">Cliquer ici !</a></p>   
+    {% else %}
+        <div class="container">
+            <form action="{% url 'store:connexion' %}" method="post">
+                {% csrf_token %}
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Connexion</div>
+                        <div class="panel-body">
+                            {% if True == error_message %}
+                                <p class="bg-danger p-d ml-b">connexion échouée, essayer une autre fois !</p>
+                            {% endif %}
+                           
+                            <div class="form-group clearfix">
+                                <label for="{{ form.username.id_for_label }}" class="col-md-4 control-label text-right">Nom d'utilisateur<span class="text-red">*</span>:</label>
+                                <div class="col-md-6">
+                                    {{ form.username }}
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group clearfix">
-                            <label for="{{ form.password.id_for_label }}" class="col-md-4 control-label text-right">Mot de passe<span class="text-red">*</span>:</label>
-                            <div class="col-md-6">
-                                {{ form.password }}
+                            <div class="form-group clearfix">
+                                <label for="{{ form.password.id_for_label }}" class="col-md-4 control-label text-right">Mot de passe<span class="text-red">*</span>:</label>
+                                <div class="col-md-6">
+                                    {{ form.password }}
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-6 col-md-offset-4">
-                            <input type="submit" value="se connecter" class="btn btn-success">
+                            <div class="col-md-6 col-md-offset-4">
+                                <input type="submit" value="se connecter" class="btn btn-success">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </form>
-    </div>
+            </form>
+        </div>
+    {% endif %}
+
 {% endblock %}
