--- a/bookstore_project/store/templates/store/detail.html
+++ b/bookstore_project/store/templates/store/detail.html
@@ -14,22 +14,11 @@
 <p style="margin-bottom: 20px;">Vous êtes sur le point de réserver {{ book.title }}!</p>	
 <p style="margin-bottom: 20px;">Insérez votre  nom et votre adresse émail et venez le cherchez après en magasin !</p>
 
-<form class="form-inline" action="{% url 'store:detail' book_id=book.id %}" method="post">
-	{% csrf_token %}
-	<div class="form-group {% if form.name.errors %}has-warning has-feedback{% endif %}">
-		<label for="{{ form.name.id_for_label }}" class="control-label">Nom</label>
-      	<!-- <input type="text" name="name" value="" id="name"> -->
-     	 {{ form.user_name }}
-	</div>
-	<div class="form-group {% if form.email.errors %}has-warning has-feedback{% endif %}">
-		<label for="{{ form.email.id_for_label }}" class="control-label">E-mail</label>
-		<!--<input type="text" name="email" value="" id="email">-->
-		{{ form.user_email }}
-	</div>
-
-	<button type="submit" class="btn btn-success">Réserver</button>
-</form>
-</div>
-
+    <!--<{% if user.is_authenticated %}
+    <p>Your account doesn't have access to this page. To proceed,
+    please login with an account that has access.</p>
+    {% else %}
+    <p>Please login to see this page.</p>
+    {% endif %}>-->
 
 {% endblock %}
