update booking_success template

--- a/bookstore_project/store/templates/store/booking_success.html
+++ b/bookstore_project/store/templates/store/booking_success.html
@@ -5,6 +5,6 @@
 	<hr>
 	<h1 class="intro-text text-center">Merci !</h1>
 	<hr class="detail-separator">
-	<p>Félicitation ! vous vennez de réserver le livre {{book_title}}</p>
+	<p>Félicitation ! vous vennez de réserver le livre {{book_title}}. Il vient d'être retirer de nos rayons !</p>
 	</hr>
 {% endblock %}
