fix account user template error

--- a/bookstore_project/store/templates/store/base.html
+++ b/bookstore_project/store/templates/store/base.html
@@ -51,7 +51,7 @@
             {% if user.is_authenticated %}
                 <div class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{% url 'store:user_account' %}"><span class="glyphicon glyphicon-user"></span>Mon espace</a>
+                        <a href="{% url 'store:account' %}"><span class="glyphicon glyphicon-user"></span>Mon espace</a>
                     </li>
             {% else %}
                 <div class="nav navbar-nav navbar-right">
