add deconnexion button when the user is connected

--- a/bookstore_project/store/templates/store/base.html
+++ b/bookstore_project/store/templates/store/base.html
@@ -53,6 +53,9 @@
                     <li>
                         <a href="{% url 'store:account' %}"><span class="glyphicon glyphicon-user"></span>Mon espace</a>
                     </li>
+                    <li>
+                        <a href="{% url 'store:deconnexion' %}"><span class="glyphicon glyphicon-log-out"></span>Se déconnecter</a>
+                    </li>
             {% else %}
                 <div class="nav navbar-nav navbar-right">
                     <li>
